--- a/scripts/telephone_ cleanning_Script.Rmd
+++ b/scripts/telephone_ cleanning_Script.Rmd
@@ -2826,10 +2826,10 @@ sex_complete <-sex
 ### CINT-SOCIODEMS Select Variable & Recode
 ```{r cint_soci}
 cint_socio <- tpw_raw %>%
-  select(id,cint_pregnancy_screen:cint_income_support, cint_identity, cint_identity_8_text) %>%
+  select(id,cint_0:cint_income_support, cint_identity, cint_identity_8_text) %>%
   mutate(
     across(
-      .cols = c(cint_pregnancy_screen, cint2:cint5),
+      .cols = c(cint2:cint5),
       .fns = ~case_when(
         .x == "Yes" ~ "1",
         .x == "No" ~ "0",
@@ -2918,61 +2918,15 @@ cint_socio <- cint_socio %>%
 
 ### CINT-SOCIODEMS Missing
 ```{r cint_soci_missing}
-cint_socio <- cint_socio %>%
-  # if cint1_1 is not selected cint2 will not be asked 
-   mutate(cint2 = case_when(is.na(cint1_1) ~ "-55", TRUE ~ cint2)) %>%
-  # if cint1_2 is not selected cint3 will not be asked 
-   mutate(cint3 = case_when(is.na(cint1_2) ~ "-55", TRUE ~ cint3)) %>%
-  # if cint1_3 is not selected cint4 will not be asked 
-   mutate(cint4 = case_when(is.na(cint1_3) ~ "-55", TRUE ~ cint4)) %>%
-  # if cint1_4 is not selected cint5 will not be asked 
-   mutate(cint5 = case_when(is.na(cint1_4) ~ "-55", TRUE ~ cint5)) %>%
-  # if they did not select others (cint1_8, and cint_identity_8), the _text column should be -55
-  mutate(cint1_8_text = case_when(is.na(cint1_8) ~ "-55", TRUE ~ cint1_8_text)) %>%
-  mutate(cint_identity_8_text = case_when(is.na(cint_identity_8_text) ~ "-55", TRUE ~ cint_identity_8_text)) %>%
-  # cint_income & cint_income_support: this was request to answer, so if it's NA, it should be TC refuse to answer 
-  mutate(cint_income = case_when(is.na(cint_income) ~ "-55", TRUE ~ cint_income)) %>%
-  mutate(cint_income_support = case_when(is.na(cint_income_support) ~ "-55", TRUE ~ cint_income_support)) %>%
-  select(-c("cint1_1", "cint1_2", "cint1_3", "cint1_4", "cint1_5", "cint1_6", "cint1_7", "cint1_8", "cint1_77"))
-
-
 
 cint_socio_complete <-
   cint_socio 
 
 
-## we do not apply missing data rules because not a standardized questionnaire
-# cint_socio_miss <- cint_socio %>%
-#   mutate(across(-c(id, matches("_8_text$")), as.numeric))%>%
-#   pct_miss_fun(
-#     id = c("id", "cint1_8_text", "cint_identity_8_text"),
-#     n_items = 12
-#   )
-# 
-# 
-# cint_socio_miss %>% 
-#   gt::gt() %>% 
-#   gt::tab_header(
-#     title = 'CINT-SOCIODEMS Missing Data',
-#     subtitle = 'By Participant')
-# 
-# 
-# cint_socio_complete <-
-#   cint_socio %>%
-#   #Below is the code that treats -77, -55 values as NA
-#   mutate(
-#     across(
-#       .cols = -c(id,matches("_8_text$")),
-#       .fns = ~case_when(
-#         .x < 0 ~ NA_real_,
-#         TRUE ~ .x
-#       )
-#     )
-#   )
 ```
 
-### CINT-Ladder Select Variable & Recode
-```{r cint-ladder}
+### CINT-SSES Select Variable & Recode
+```{r cint-SSES}
 cint_ladder <- tpw_raw %>%
   select(id, cint_ladder1, cint_ladder2) %>% 
   mutate(
